Finalização cards noticias

--- a/index.html
+++ b/index.html
@@ -136,11 +136,10 @@
               <div class="col-md-8 px-3">
                 <div class="card-block px-3 noticias-body">
                   <h4 class="card-title-1">Adquira já nosso brigadeiro dos deuses!</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
-
+                    <p class="card-text-1">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
                 </div>
                 <div class="text-right">
-                  <a href="#" class="btn btn-primary botao-card ">Saiba mais</a>
+                  <a href="#" class="btn btn-primary botao-card-1">Saiba mais</a>
                 </div>
               </div>
             </div>
@@ -148,14 +147,15 @@
           <div class="card">
             <div class="row card-2">
               <div class="col-md-4">
-                <img src="src\img_noticia2.png" class="w-100">
+                <img src="src\img_noticia2.png" class="img-noticias">
               </div>
               <div class="col-md-8 px-3">
-                <div class="card-block px-3">
-                  <h4 class="card-title">Lorem ipsum dolor sit amet</h4>
-                    <p class="card-text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                    <p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <a href="#" class="btn btn-primary">Read More</a>
+                <div class="card-block px-3 noticias-body">
+                  <h4 class="card-title-2">Nova fornada de camisetas</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
+                    <div class="text-right">
+                      <a href="#" class="btn btn-primary botao-card-2">Saiba mais</a>
+                    </div>
                 </div>
               </div>
             </div>
@@ -163,14 +163,15 @@
           <div class="card">
             <div class="row card-3">
               <div class="col-md-4">
-                <img src="src\img_noticia3.png" class="w-100">
+                <img src="src\img_noticia3.png" class="img-noticias">
               </div>
               <div class="col-md-8 px-3">
-                <div class="card-block px-3">
-                  <h4 class="card-title">Lorem ipsum dolor sit amet</h4>
-                    <p class="card-text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                    <p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <a href="#" class="btn btn-primary">Read More</a>
+                <div class="card-block px-3 noticias-body">
+                  <h4 class="card-title-3">Fotos da ação do dia 19/03</h4>
+                    <p class="card-text-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
+                    <div class="text-right">
+                      <a href="#" class="btn btn-primary botao-card-3">Saiba mais</a>
+                    </div>
                 </div>
               </div>
             </div>
