--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           	<div class="banner-sub-heading">
             	O Grupo Daniel surgiu com o intuito de ajudar o próximo – principalmente aqueles <br> que estão à margem da sociedade.
           	</div>
-          	<button type="button" class="btn btn-warning text-dark btn-banner">Faça uma doação</button>
+          	<button type="button" class="btn btn-banner">Faça uma doação</button>
         	</div>
       	</div>
       </div>
@@ -97,7 +97,7 @@
               <h5 class="card-title">Seja um doador</h5>
               <p class="card-text">Você pode contribuir para que o Grupo Daniel deixe sua marca no mundo e possa ajudar cada vez mais pessoas.</p>
               <div class="text-center">
-                <a href="#" class="btn btn-primary botao-card">Faça uma doação</a>
+                <a href="#" class="btn botao-card">Faça uma doação</a>
               </div>
             </div>
           </div>
@@ -107,7 +107,7 @@
               <h5 class="card-title">Trabalhe conosco</h5>
               <p class="card-text">Já pensou em fazer parte de um time que não tem medo de ajudar o próximo?</p>
               <div class="text-center">
-                <a href="#" class="btn btn-primary botao-card">Virar voluntário</a>
+                <a href="#" class="btn botao-card">Virar voluntário</a>
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@
               <h5 class="card-title">Compre nossos produtos </h5>
               <p class="card-text">Nos ajude a fazer um mundo melhor e ainda receba um presentinho ;)</p>
               <div class="text-center">
-                <a href="#" class="btn btn-primary botao-card">Saiba mais</a>
+                <a href="#" class="btn botao-card">Saiba mais</a>
               </div>
             </div>
           </div>
@@ -139,7 +139,7 @@
                     <p class="card-text-1">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
                 </div>
                 <div class="text-right">
-                  <a href="#" class="btn btn-primary botao-card-1">Saiba mais</a>
+                  <a href="#" class="btn botao-card-1">Saiba mais</a>
                 </div>
               </div>
             </div>
@@ -154,7 +154,7 @@
                   <h4 class="card-title-2">Nova fornada de camisetas</h4>
                     <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
                     <div class="text-right">
-                      <a href="#" class="btn btn-primary botao-card-2">Saiba mais</a>
+                      <a href="#" class="btn botao-card-2">Saiba mais</a>
                     </div>
                 </div>
               </div>
@@ -170,7 +170,7 @@
                   <h4 class="card-title-3">Fotos da ação do dia 19/03</h4>
                     <p class="card-text-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
                     <div class="text-right">
-                      <a href="#" class="btn btn-primary botao-card-3">Saiba mais</a>
+                      <a href="#" class="btn botao-card-3">Saiba mais</a>
                     </div>
                 </div>
               </div>
@@ -180,89 +180,175 @@
       </div>
     </div>
     <div class="contato">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-4 offset-md-1 missao-left text-justify">
+            <p class="titulo-contato">
+              Vire nosso colaborador
+            </p>
+            <p class="texto-contato">
+              O Grupo Daniel é um grupo de voluntários que busca oferecer apoio a moradores de rua. Lutamos para que essas pessoas possam saborear uma refeição preparada com muito carinho, que possam se proteger do frio intenso e que tenham acesso a cuidados básicos de higiene.E para atingirmos mais pessoas contamos com você!
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-4 offset-md-1 missao-right text-justify">
+            <!-- Begin Mailchimp Signup Form -->
+              <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+              <style type="text/css">
+              	#mc_embed_signup{background:#003577; clear:left; font:14px Helvetica,Arial,sans-serif; }
+              	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+              	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+              </style>
+              <div id="mc_embed_signup">
+              <form action="https://gmail.us19.list-manage.com/subscribe/post?u=d709f1eef165a07733584244d&amp;id=c7d952fac0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <div id="mc_embed_signup_scroll">
+              <div class="mc-field-group">
+              	<input type="text" value="" placeholder="Nome" name="FNAME" class="required" id="mce-FNAME">
+              </div>
+              <div class="mc-field-group">
+              	<input type="email" value="" placeholder="Email" name="EMAIL" class="required email" id="mce-EMAIL">
+              </div>
+              <div class="mc-field-group">
+              	<input type="text" value="" placeholder="Mensagem" name="MMERGE2" class="" id="mce-MMERGE2">
+              </div>
+              	<div id="mce-responses" class="clear">
+              		<div class="response" id="mce-error-response" style="display:none"></div>
+              		<div class="response" id="mce-success-response" style="display:none"></div>
+              	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d709f1eef165a07733584244d_c7d952fac0" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="Enviar" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                  </div>
+              </form>
+              </div>
+              <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='text'; /**
+               * Translated default messages for the $ validation plugin.
+               * Locale: PT_PT
+               */
+              $.extend($.validator.messages, {
+              	required: "Campo de preenchimento obrigat&oacute;rio.",
+              	remote: "Por favor, corrija este campo.",
+              	email: "Por favor, introduza um endere&ccedil;o eletr&oacute;nico v&aacute;lido.",
+              	url: "Por favor, introduza um URL v&aacute;lido.",
+              	date: "Por favor, introduza uma data v&aacute;lida.",
+              	dateISO: "Por favor, introduza uma data v&aacute;lida (ISO).",
+              	number: "Por favor, introduza um n&uacute;mero v&aacute;lido.",
+              	digits: "Por favor, introduza apenas d&iacute;gitos.",
+              	creditcard: "Por favor, introduza um n&uacute;mero de cart&atilde;o de cr&eacute;dito v&aacute;lido.",
+              	equalTo: "Por favor, introduza de novo o mesmo valor.",
+              	accept: "Por favor, introduza um ficheiro com uma extens&atilde;o v&aacute;lida.",
+              	maxlength: $.validator.format("Por favor, n&atilde;o introduza mais do que {0} caracteres."),
+              	minlength: $.validator.format("Por favor, introduza pelo menos {0} caracteres."),
+              	rangelength: $.validator.format("Por favor, introduza entre {0} e {1} caracteres."),
+              	range: $.validator.format("Por favor, introduza um valor entre {0} e {1}."),
+              	max: $.validator.format("Por favor, introduza um valor menor ou igual a {0}."),
+              	min: $.validator.format("Por favor, introduza um valor maior ou igual a {0}.")
+              });}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+              <!--End mc_embed_signup-->
+          </div>
+        </div>
+      </div>
     </div>
     <div class="sobre">
       <div class="container">
-        <div class="row">
+        <div class="row sobre-esquerda">
           <div class="col-sm-12 col-md-4 missao-left text-justify">
-             <img src="src\logo_Grupo_Daniel_sem_slogan.svg" width="300" height="30" class="d-inline-block align-top" alt="">
+             <img src="src\sobre1.PNG" width="300" class="d-inline-block align-top" alt="">
           </div>
-          <div class="col-sm-12 col-md-8 missao-right text-justify">
-            <p class="titulo-missao">
-              Nossa missão
+          <div class="col-sm-12 col-md-6 missao-right text-justify">
+            <p class="titulo-sobre">
+              Pra onde vão suas doações?
             </p>
-            <p class="texto-missao">
-              Nós lutamos para que essas pessoas possam saborear uma refeição preparada com muito carinho, que possam se proteger do frio intenso e que tenham acesso a cuidados básicos de higiene.
-              A mudança social começa já! Estamos passando por um momento turbulento. No entanto, pessoas sem moradia precisam de nós mais do que nunca!
+            <p class="texto-sobre">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua
             </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-12 col-md-8 missao-right text-justify">
-            <p class="titulo-missao">
-              Nossa missão
+        <div class="row sobre-direita">
+          <div class="col-sm-12 col-md-6 offset-md-2 missao-right text-justify">
+            <p class="titulo-sobre">
+              Como entregamos nossas marmitas?
             </p>
-            <p class="texto-missao">
+            <p class="texto-sobre">
               Nós lutamos para que essas pessoas possam saborear uma refeição preparada com muito carinho, que possam se proteger do frio intenso e que tenham acesso a cuidados básicos de higiene.
               A mudança social começa já! Estamos passando por um momento turbulento. No entanto, pessoas sem moradia precisam de nós mais do que nunca!
             </p>
           </div>
           <div class="col-sm-12 col-md-4 missao-left text-justify">
-             <img src="src\logo_Grupo_Daniel_sem_slogan.svg" width="300" height="30" class="d-inline-block align-top" alt="">
+             <img src="src\sobre2.PNG" width="300" class="d-inline-block align-top" alt="">
           </div>
         </div>
-        <div class="row">
+        <div class="row sobre-esquerda">
           <div class="col-sm-12 col-md-4 missao-left text-justify">
-             <img src="src\logo_Grupo_Daniel_sem_slogan.svg" width="300" height="30" class="d-inline-block align-top" alt="">
+             <img src="src\sobre3.PNG" width="300" class="d-inline-block align-top" alt="">
           </div>
-          <div class="col-sm-12 col-md-8 missao-right text-justify">
-            <p class="titulo-missao">
-              Nossa missão
+          <div class="col-sm-12 col-md-6 missao-right text-justify">
+            <p class="titulo-sobre">
+              Sabe de que maneiras você pode ajudar?
             </p>
-            <p class="texto-missao">
-              Nós lutamos para que essas pessoas possam saborear uma refeição preparada com muito carinho, que possam se proteger do frio intenso e que tenham acesso a cuidados básicos de higiene.
-              A mudança social começa já! Estamos passando por um momento turbulento. No entanto, pessoas sem moradia precisam de nós mais do que nunca!
+            <p class="texto-sobre">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua
             </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-12 col-md-8 missao-right text-justify">
-            <p class="titulo-missao">
-              Nossa missão
+        <div class="row sobre-direita">
+          <div class="col-sm-12 col-md-6 offset-md-2 missao-right text-justify">
+            <p class="titulo-sobre">
+              Sabe por que Daniel?
             </p>
-            <p class="texto-missao">
-              Nós lutamos para que essas pessoas possam saborear uma refeição preparada com muito carinho, que possam se proteger do frio intenso e que tenham acesso a cuidados básicos de higiene.
-              A mudança social começa já! Estamos passando por um momento turbulento. No entanto, pessoas sem moradia precisam de nós mais do que nunca!
+            <p class="texto-sobre">
+              O Daniel foi o primeiro impactado com as nossas ações de distribuição de alimento. Ele marcou muito a todos nós, e por isso fizemos esta homenagem a ele.
             </p>
           </div>
           <div class="col-sm-12 col-md-4 missao-left text-justify">
-             <img src="src\logo_Grupo_Daniel_sem_slogan.svg" width="300" height="30" class="d-inline-block align-top" alt="">
+             <img src="src\sobre4.PNG" width="300" class="d-inline-block align-top" alt="">
           </div>
         </div>
       </div>
     </div>
     <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6 footer-left">
-          <p class="titulo-missao">
-            Participe desse sonho com a gente!
-          </p>
-          <div class="row list-group">
-            <button type="button" class="btn btn-warning text-dark btn-banner">Faça uma doação</button>
-            <button type="button" class="btn btn-warning text-dark btn-banner">Faça uma doação</button>
-            <button type="button" class="btn btn-warning text-dark btn-banner">Faça uma doação</button>
-          </div>
+      <div class="container-fluid d-flex">
+        <div class="row col-sm-12 col-md-6 footer-left">
+            <div class="col-sm-12 col-md-12 offset-md-3 text-left">
+              <p class="titulo-footer-left">
+                Participe desse sonho com a gente!
+              </p>
+              <div class="row list-group">
+                <button type="button" class="btn text-light btn-footer">Faça uma doação</button>
+                <button type="button" class="btn text-light btn-footer">Faça uma doação</button>
+                <button type="button" class="btn text-light btn-footer">Faça uma doação</button>
+              </div>
+            </div>
         </div>
-          <div class="col-sm-12 col-md-6 footer-right">
-          <p class="titulo-missao">
-            Nossa missão
-          </p>
-          <p class="texto-missao">
-            Nós lutamos para que essas pessoas possam saborear uma refeição preparada com muito carinho, que possam se proteger do frio intenso e que tenham acesso a cuidados básicos de higiene.
-            A mudança social começa já! Estamos passando por um momento turbulento. No entanto, pessoas sem moradia precisam de nós mais do que nunca!
-          </p>
-        </div>
+        <div class="row col-sm-12 col-md-12 footer-right">
+            <div class="container-fluid d-flex text-left">
+              <div class="col-sm-12 col-md-2 list-group links-footer">
+                <p class="link-footer">
+                  Quem somos
+                </p>
+                <p class="link-footer">
+                  Como ajudar
+                </p>
+                <p class="link-footer">
+                  Noticias
+                </p>
+                <p class="link-footer">
+                  Vire colaborador
+                </p>
+                <p class="link-footer">
+                  Informações
+                </p>
+              </div>
+              <div class="col-sm-12 col-md-8 list-group enderecos-footer">
+                <p class="endereco-footer">
+                  As entregas das doações podem ser<br> combinadas por WhatsApp:
+                </p>
+                <p class="endereco-footer">
+                  (41) 9528-0996 / João Vitor – Coordenador<br> do Grupo Daniel
+                </p>
+                <p class="endereco-footer">
+                   Para doar, acesse a nossa Vakinha ou<br> PagSeguro
+                </p>
+              </div>
+            </div>
         </div>
       </div>
     </div>
