--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
           	<div class="banner-sub-heading">
             	O Grupo Daniel surgiu com o intuito de ajudar o próximo – principalmente aqueles <br> que estão à margem da sociedade.
           	</div>
-          	<button type="button" class="btn btn-banner">Faça uma doação</button>
-        	</div>
+            <div class="botao-banner col-md-4">
+          	   <button type="button" class="btn btn-banner">Faça uma doação</button>
+            </div>
+          </div>
       	</div>
       </div>
     <div class="missao">
