--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="#">Como Ajudar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Noticias</a>
+            <a class="nav-link" href="#">Notícias</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Vire Colaborador</a>
@@ -92,43 +92,49 @@
       </div>
     </div>
     <div class="ajudar">
+        <p class="titulo-ajudar">Sabe como você pode nos ajudar?</p>
         <div class="row">
-          <div class="col-sm-12 col-md-3 offset-md-1 card-ajudar ">
-            <img class="card-img-top" src="src\card1.png" alt="Card image cap">
-            <div class="card-body">
+          <div class="col-sm-12 col-md-4">
+            <div class="card-ajudar">
+              <img class="card-img-top" src="src\card1.png" alt="Card image cap">
+              <div class="card-body">
               <h5 class="card-title">Seja um doador</h5>
               <p class="card-text">Você pode contribuir para que o Grupo Daniel deixe sua marca no mundo e possa ajudar cada vez mais pessoas.</p>
               <div class="text-center">
                 <a href="#" class="btn botao-card">Faça uma doação</a>
               </div>
             </div>
+            </div>
           </div>
-          <div class="col-sm-12 col-md-3 card-ajudar">
-            <img class="card-img-top" src="src\card2.png" alt="Card image cap">
-            <div class="card-body">
+          <div class="col-sm-12 col-md-4">
+            <div class="card-ajudar">
+              <img class="card-img-top" src="src\card2.png" alt="Card image cap">
+              <div class="card-body">
               <h5 class="card-title">Trabalhe conosco</h5>
               <p class="card-text">Já pensou em fazer parte de um time que não tem medo de ajudar o próximo?</p>
               <div class="text-center">
                 <a href="#" class="btn botao-card">Virar voluntário</a>
               </div>
             </div>
+            </div>
           </div>
-          <div class="col-sm-12 col-md-3 card-ajudar">
-            <img class="card-img-top" src="src\card3.png" alt="Card image cap">
-            <div class="card-body">
+          <div class="col-sm-12 col-md-4">
+            <div class="card-ajudar">
+              <img class="card-img-top" src="src\card3.png" alt="Card image cap">
+              <div class="card-body">
               <h5 class="card-title">Compre nossos produtos </h5>
               <p class="card-text">Nos ajude a fazer um mundo melhor e ainda receba um presentinho ;)</p>
               <div class="text-center">
                 <a href="#" class="btn botao-card">Saiba mais</a>
               </div>
             </div>
+            </div>
           </div>
-
       </div>
     </div>
     <div class="noticias">
       <div class="container">
-        <p class="noticias-titulo">Noticias</p>
+        <p class="noticias-titulo">Notícias</p>
         <div class="row cards-noticias">
           <div class="card">
             <div class="row card-1">
@@ -140,7 +146,7 @@
                   <h4 class="card-title-1">Adquira já nosso brigadeiro dos deuses!</h4>
                     <p class="card-text-1">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
                 </div>
-                <div class="text-right">
+                <div class="col-md-4 offset-md-6 text-center">
                   <a href="#" class="btn botao-card-1">Saiba mais</a>
                 </div>
               </div>
@@ -148,14 +154,14 @@
           </div>
           <div class="card">
             <div class="row card-2">
-              <div class="col-md-4">
+              <div class="col-md-4 text-center">
                 <img src="src\img_noticia2.png" class="img-noticias">
               </div>
               <div class="col-md-8 px-3">
                 <div class="card-block px-3 noticias-body">
                   <h4 class="card-title-2">Nova fornada de camisetas</h4>
                     <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
-                    <div class="text-right">
+                    <div class="col-md-4 offset-md-6 text-center">
                       <a href="#" class="btn botao-card-2">Saiba mais</a>
                     </div>
                 </div>
@@ -164,15 +170,15 @@
           </div>
           <div class="card">
             <div class="row card-3">
-              <div class="col-md-4">
+              <div class="col-md-4 text-center">
                 <img src="src\img_noticia3.png" class="img-noticias">
               </div>
               <div class="col-md-8 px-3">
                 <div class="card-block px-3 noticias-body">
                   <h4 class="card-title-3">Fotos da ação do dia 19/03</h4>
                     <p class="card-text-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
-                    <div class="text-right">
-                      <a href="#" class="btn botao-card-3">Saiba mais</a>
+                    <div class="col-md-4 offset-md-6 text-center">
+                      <a href="#" class="btn botao-card-3 ">Saiba mais</a>
                     </div>
                 </div>
               </div>
@@ -252,10 +258,10 @@
     <div class="sobre">
       <div class="container">
         <div class="row sobre-esquerda">
-          <div class="col-sm-12 col-md-4 missao-left text-justify">
+          <div class="col-sm-12 col-md-4 order-1 missao-left text-justify">
              <img src="src\sobre1.PNG" width="300" class="d-inline-block align-top" alt="">
           </div>
-          <div class="col-sm-12 col-md-6 missao-right text-justify">
+          <div class="col-sm-12 col-md-6 order-2  missao-right text-justify">
             <p class="titulo-sobre">
               Pra onde vão suas doações?
             </p>
@@ -264,8 +270,8 @@
             </p>
           </div>
         </div>
-        <div class="row sobre-direita">
-          <div class="col-sm-12 col-md-6 offset-md-2 missao-right text-justify">
+        <div class="row sobre-direita d-flex">
+          <div class="col-sm-12 col-md-6 order-sm-1 offset-md-2 missao-right text-justify">
             <p class="titulo-sobre">
               Como entregamos nossas marmitas?
             </p>
@@ -274,7 +280,7 @@
               A mudança social começa já! Estamos passando por um momento turbulento. No entanto, pessoas sem moradia precisam de nós mais do que nunca!
             </p>
           </div>
-          <div class="col-sm-12 col-md-4 missao-left text-justify">
+          <div class="col-sm-12 col-md-4 order-sm-2 missao-left text-justify">
              <img src="src\sobre2.PNG" width="300" class="d-inline-block align-top" alt="">
           </div>
         </div>
@@ -307,22 +313,23 @@
       </div>
     </div>
     <div class="footer">
-      <div class="container-fluid d-flex">
-        <div class="row col-sm-12 col-md-6 footer-left">
+      <div class="container-fluid d-sm-flex">
+        <div class="row p-12 col-md-6 footer-left">
             <div class="col-sm-12 col-md-12 offset-md-3 text-left">
-              <p class="titulo-footer-left">
-                Participe desse sonho com a gente!
-              </p>
-              <div class="row list-group">
+
+              <div class="row list-group align-items-center">
+                <p class="titulo-footer-left">
+                  Participe desse sonho com a gente!
+                </p>
                 <button type="button" class="btn text-light btn-footer">Faça uma doação</button>
                 <button type="button" class="btn text-light btn-footer">Faça uma doação</button>
                 <button type="button" class="btn text-light btn-footer">Faça uma doação</button>
               </div>
             </div>
         </div>
-        <div class="row col-sm-12 col-md-12 footer-right">
+        <div class="row col-sm-12 col-md-6 footer-right">
             <div class="container-fluid d-flex text-left">
-              <div class="col-sm-12 col-md-2 list-group links-footer">
+              <div class="col-sm-12 col-md-3 list-group links-footer align-items-left">
                 <p class="link-footer">
                   Quem somos
                 </p>
@@ -330,7 +337,7 @@
                   Como ajudar
                 </p>
                 <p class="link-footer">
-                  Noticias
+                  Notícias
                 </p>
                 <p class="link-footer">
                   Vire colaborador
