--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Quem Somos</a>
+            <a class="nav-link" href="#missao">Quem Somos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Como Ajudar</a>
+            <a class="nav-link" href="#ajudar">Como Ajudar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Notícias</a>
+            <a class="nav-link" href="#noticias">Notícias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Vire Colaborador</a>
+            <a class="nav-link" href="#contato">Vire Colaborador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Informações</a>
+            <a class="nav-link" href="#sobre">Informações</a>
           </li>
         </ul>
       </div>
@@ -62,7 +62,7 @@
           </div>
       	</div>
       </div>
-    <div class="missao">
+    <div class="missao" id="missao">
       <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-4 offset-md-1 missao-left text-justify">
@@ -91,7 +91,7 @@
         </div>
       </div>
     </div>
-    <div class="ajudar">
+    <div class="ajudar" id="ajudar">
         <p class="titulo-ajudar">Sabe como você pode nos ajudar?</p>
         <div class="row">
           <div class="col-sm-12 col-md-4">
@@ -132,7 +132,7 @@
           </div>
       </div>
     </div>
-    <div class="noticias">
+    <div class="noticias" id="noticias">
       <div class="container">
         <p class="noticias-titulo">Notícias</p>
         <div class="row cards-noticias">
@@ -144,7 +144,7 @@
               <div class="col-md-8 px-3">
                 <div class="card-block px-3 noticias-body">
                   <h4 class="card-title-1">Adquira já nosso brigadeiro dos deuses!</h4>
-                    <p class="card-text-1">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
+                    <p class="card-text-1">O Projeto Brigadeiro Solidário foi criado no intuito de vender brigadeiros nos arredores de Curitiba, incluindo Museu Oscar Niemeyer, Passeio Público e Largo da Ordem, o dinheiro revertido por esse projeto ajuda nas nossas ações voluntárias. A venda ocorre em alguns finais de semana, sempre de acordo com a disponibilidade dos voluntários!</p>
                 </div>
                 <div class="col-md-4 offset-md-6 text-center">
                   <a href="#" class="btn botao-card-1">Saiba mais</a>
@@ -160,7 +160,7 @@
               <div class="col-md-8 px-3">
                 <div class="card-block px-3 noticias-body">
                   <h4 class="card-title-2">Nova fornada de camisetas</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
+                    <p class="card-text">Temos novidades: nossos novos modelos de camisetas. Adquirindo esse produto do Grupo Daniel você ajuda contribuindo com os nossos custos e na cooperatividade para o bem!</p>
                     <div class="col-md-4 offset-md-6 text-center">
                       <a href="#" class="btn botao-card-2">Saiba mais</a>
                     </div>
@@ -187,7 +187,7 @@
         </div>
       </div>
     </div>
-    <div class="contato">
+    <div class="contato" id="contato">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-4 offset-md-1 missao-left text-justify">
@@ -255,7 +255,7 @@
         </div>
       </div>
     </div>
-    <div class="sobre">
+    <div class="sobre" id="sobre">
       <div class="container">
         <div class="row sobre-esquerda">
           <div class="col-sm-12 col-md-4 order-1 missao-left text-justify">
@@ -266,7 +266,7 @@
               Pra onde vão suas doações?
             </p>
             <p class="texto-sobre">
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua
+              Todas as doações são destinadas à alimentação de pessoas em situação de rua. Além dos alimentos também temos custos com os descartáveis que são feitas com as doações em dinheiro.
             </p>
           </div>
         </div>
@@ -293,7 +293,7 @@
               Sabe de que maneiras você pode ajudar?
             </p>
             <p class="texto-sobre">
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua
+              São 3 formas de ajudar: através de doações (presenciais e online), sendo um voluntário e adquirindo os nossos produtos! Saiba mais sobre cada um deles na descrição acima.
             </p>
           </div>
         </div>
@@ -322,8 +322,8 @@
                   Participe desse sonho com a gente!
                 </p>
                 <button type="button" class="btn text-light btn-footer">Faça uma doação</button>
-                <button type="button" class="btn text-light btn-footer">Faça uma doação</button>
-                <button type="button" class="btn text-light btn-footer">Faça uma doação</button>
+                <button type="button" class="btn text-light btn-footer">Virar voluntário</button>
+                <button type="button" class="btn text-light btn-footer">Comprar produtos</button>
               </div>
             </div>
         </div>
@@ -331,19 +331,19 @@
             <div class="container-fluid d-flex text-left">
               <div class="col-sm-12 col-md-3 list-group links-footer align-items-left">
                 <p class="link-footer">
-                  Quem somos
+                  <a class="link-footer" href="#missao">Quem somos</a>
                 </p>
                 <p class="link-footer">
-                  Como ajudar
+                  <a class="link-footer" href="#ajudar">Como ajudar</a>
                 </p>
                 <p class="link-footer">
-                  Notícias
+                  <a class="link-footer" href="#noticias">Notícias</a>
                 </p>
                 <p class="link-footer">
-                  Vire colaborador
+                  <a class="link-footer" href="#contato">Vire colaborador</a>
                 </p>
                 <p class="link-footer">
-                  Informações
+                  <a class="link-footer" href="#sobre">Informações</a>
                 </p>
               </div>
               <div class="col-sm-12 col-md-8 list-group enderecos-footer">
