Alinhamento texto cards

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <div class="col-md-8 px-3">
                 <div class="card-block px-3 noticias-body">
                   <h4 class="card-title-2">Nova fornada de camisetas</h4>
-                    <p class="card-text">Temos novidades: nossos novos modelos de camisetas. Adquirindo esse produto do Grupo Daniel você ajuda contribuindo com os nossos custos e na cooperatividade para o bem!</p>
+                    <p class="card-text-2">Temos novidades: nossos novos modelos de camisetas. Adquirindo esse produto do Grupo Daniel você ajuda contribuindo com os nossos custos e na cooperatividade para o bem!</p>
                     <div class="col-md-4 offset-md-6 text-center">
                       <a href="#" class="btn botao-card-2">Saiba mais</a>
                     </div>
