Alinhamento de textos e hover dos botoes do footer

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="ajudar" id="ajudar">
         <p class="titulo-ajudar">Sabe como você pode nos ajudar?</p>
         <div class="row">
-          <div class="col-sm-12 col-md-4">
+          <div class="col-sm-12 col-md-4" style="padding-left: 0;">
             <div class="card-ajudar">
               <img class="card-img-top" src="src\card1.png" alt="Card image cap">
               <div class="card-body">
@@ -106,7 +106,7 @@
             </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-4">
+          <div class="col-sm-12 col-md-4" style="padding-left: 0;">
             <div class="card-ajudar">
               <img class="card-img-top" src="src\card2.png" alt="Card image cap">
               <div class="card-body">
@@ -118,7 +118,7 @@
             </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-4">
+          <div class="col-sm-12 col-md-4" style="padding-left: 0;">
             <div class="card-ajudar">
               <img class="card-img-top" src="src\card3.png" alt="Card image cap">
               <div class="card-body">
@@ -144,9 +144,9 @@
               <div class="col-md-8 px-3">
                 <div class="card-block px-3 noticias-body">
                   <h4 class="card-title-1">Adquira já nosso brigadeiro dos deuses!</h4>
-                    <p class="card-text-1">O Projeto Brigadeiro Solidário foi criado no intuito de vender brigadeiros nos arredores de Curitiba, incluindo Museu Oscar Niemeyer, Passeio Público e Largo da Ordem, o dinheiro revertido por esse projeto ajuda nas nossas ações voluntárias. A venda ocorre em alguns finais de semana, sempre de acordo com a disponibilidade dos voluntários!</p>
+                    <p class="card-text-1 text-sm-left">O Projeto Brigadeiro Solidário foi criado no intuito de vender brigadeiros nos arredores de Curitiba, incluindo Museu Oscar Niemeyer, Passeio Público e Largo da Ordem, o dinheiro revertido por esse projeto ajuda nas nossas ações voluntárias. A venda ocorre em alguns finais de semana, sempre de acordo com a disponibilidade dos voluntários!</p>
                 </div>
-                <div class="col-md-4 offset-md-6 text-center">
+                <div class="col-md-4 offset-md-6 text-center" style="padding-left: 0;padding-top: 10px;">
                   <a href="#" class="btn botao-card-1">Saiba mais</a>
                 </div>
               </div>
@@ -160,8 +160,8 @@
               <div class="col-md-8 px-3">
                 <div class="card-block px-3 noticias-body">
                   <h4 class="card-title-2">Nova fornada de camisetas</h4>
-                    <p class="card-text-2">Temos novidades: nossos novos modelos de camisetas. Adquirindo esse produto do Grupo Daniel você ajuda contribuindo com os nossos custos e na cooperatividade para o bem!</p>
-                    <div class="col-md-4 offset-md-6 text-center">
+                    <p class="card-text-2 text-sm-justify">Temos novidades: nossos novos modelos de camisetas. Adquirindo esse produto do Grupo Daniel você ajuda contribuindo com os nossos custos e na cooperatividade para o bem!</p>
+                    <div class="col-md-4 offset-md-6 text-center" style="padding-left: 0;">
                       <a href="#" class="btn botao-card-2">Saiba mais</a>
                     </div>
                 </div>
@@ -176,8 +176,8 @@
               <div class="col-md-8 px-3">
                 <div class="card-block px-3 noticias-body">
                   <h4 class="card-title-3">Fotos da ação do dia 19/03</h4>
-                    <p class="card-text-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
-                    <div class="col-md-4 offset-md-6 text-center">
+                    <p class="card-text-3 text-sm-left">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua</p>
+                    <div class="col-md-4 offset-md-6 text-center" style="padding-left: 0;">
                       <a href="#" class="btn botao-card-3 ">Saiba mais</a>
                     </div>
                 </div>
