--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
                 <p class="titulo-footer-left">
                   Participe desse sonho com a gente!
                 </p>
-                <button type="button" class="btn text-light btn-footer">Faça uma doação</button>
-                <button type="button" class="btn text-light btn-footer">Virar voluntário</button>
-                <button type="button" class="btn text-light btn-footer">Comprar produtos</button>
+                <a href="#" type="button" class="btn btn-footer">Faça uma doação</a>
+                <a href="#contato" type="button" class="btn btn-footer">Virar voluntário</a>
+                <a href="#" type="button" class="btn btn-footer">Comprar produtos</a>
               </div>
             </div>
         </div>
