códigos do PayPal implementados

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <div class="row sobre-direita">
           <div class="col-sm-12 col-md-6 offset-md-2 missao-right text-justify">
             <p class="titulo-sobre">
-              Sabe por que Daniel?
+              Sabe por que "Daniel"?
             </p>
             <p class="texto-sobre">
               O Daniel foi o primeiro impactado com as nossas ações de distribuição de alimento. Ele marcou muito a todos nós, e por isso fizemos esta homenagem a ele.
@@ -311,11 +311,23 @@
           </div>
         </div>
       </div>
+    
+      <div class="paypal">
+        <p>Doe para nos ajudar a continuar com esse trabalho:</p>
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+          <input type="hidden" name="cmd" value="_s-xclick" />
+          <input type="hidden" name="hosted_button_id" value="89WB3W7FXDJ8S" />
+          <input type="image" src="https://www.paypalobjects.com/pt_BR/BR/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+          <img alt="" border="0" src="https://www.paypal.com/pt_BR/i/scr/pixel.gif" width="1" height="1" />
+          </form>      
+      </div>  
     </div>
+
     <div class="footer">
       <div class="container-fluid d-sm-flex">
         <div class="row p-12 col-md-6 footer-left">
             <div class="col-sm-12 col-md-12 offset-md-3 text-left">
+
 
               <div class="row list-group align-items-center">
                 <p class="titulo-footer-left">
@@ -354,7 +366,7 @@
                   (41) 9528-0996 / João Vitor – Coordenador<br> do Grupo Daniel
                 </p>
                 <p class="endereco-footer">
-                   Para doar, acesse a nossa Vakinha ou<br> PagSeguro
+                   Para fazer uma doação, acesse nosso <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=89WB3W7FXDJ8S&source=url" target="_blank" rel=“noopener noreferrer”>PayPal</a>
                 </p>
               </div>
             </div>
