--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             	O Grupo Daniel surgiu com o intuito de ajudar o próximo – principalmente aqueles <br> que estão à margem da sociedade.
           	</div>
             <div class="botao-banner col-md-4">
-          	   <button type="button" class="btn btn-banner">Faça uma doação</button>
+              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=89WB3W7FXDJ8S&source=url" target="_blank" rel=“noopener noreferrer”><button type="button" class="btn btn-banner">Faça uma doação</button></a>
             </div>
           </div>
       	</div>
